[package]
name = "simple-physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amath = { git = "https://github.com/Alex-Stone-Github/amath" }
aengine2 = { git = "https://github.com/Alex-Stone-Github/aengine2" }
